--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "devServer": "live-server --no-css-inject",
-    "start": "npm-run-all --parallel devServer watch:sass",
+    "startDev": "npm-run-all --parallel devServer watch:sass",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,5 +23,7 @@
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
